--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       <div class="hero-inner">
         <div>
           <div class="badge"><span></span> UK Property & Co-Living</div>
-          <h1>Better Places to Live. Smarter Properties to Own.</h1>
+          <h1>Better Places to Live Smarter Properties to Own</h1>
           <p class="lead">
             Elysium Living is a UK-based property company specialising in high-quality shared homes and residential refurbishments. We turn tired buildings into well-managed, long-term assets for investors – and comfortable, modern homes for residents.
           </p>
